<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyStatus</string>
    <string name="action_settings">Settings</string>
    <string name="month_year">m</string>
    <string name="dialog_title">Pick a color</string>
    <string name="name_profile">Lyudmila</string>
    <string name="stats">Stats</string>
    <string name="good_day">Good Day</string>
    <string name="bad_day">Bad day</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome to</string>
    <string name="daily_status">Daily Status</string>

    <!-- Registration activity -->
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="please_enter_first_name">Please, enter firstname</string>
    <string name="sex">sex</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="title_dialog_add_event">Add day event</string>
    <string name="title_dialog_new_version">New Version</string>
    <string name="no_data_about_days">There are no good or bad days selected in this </string>
    <string name="contentdesc4pic1">Content</string>
    <string name="week_for_chart_act">week</string>
    <string name="title_add_image">Please, choose or take photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="alarm_message">How was your day? What happend with you today?</string>
    <string name="alarm_bad_days_message">You have a lot of bad days. It is time to change something.</string>
    <string name="alarm_empty_days_message">You have not mentioned your days. What was the day for you?</string>
    <string name="rate">Rate</string>
    <string name="error_internet_off">Connect Internet</string>
    <string name="show_all_events">Show all Events</string>
    <string name="show_good_events">Show Good Events</string>
    <string name="show_bad_events">Show Bad Events</string>
    <string name="show_data_picker">Choose a date</string>
    <string name="app_id">422879181145153</string>
    <string name="location">en</string>

    <string-array name="sex">
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>

    <item name="tag_standart_event" type="id">1</item>

    <!-- Empty View -->
    <string name="empty_message">No items yet</string>
    <string name="loading_message">Please wait</string>
    <string name="error_message">Oops! Something wrong happened</string>
    <string name="empty_button">Try again</string>
    <string name="loading_button">Cancel</string>
    <string name="error_button">Try again</string>

    <!-- Rate dialog -->
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy this app, please take a moment to rate this app. It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Remind later</string>
    <string name="rta_dialog_no">No, thanks</string>

    <!-- Popup menu -->
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Main Activity add menu item -->
    <string name="add_day_picture">Add Day Picture</string>
    <string name="add_standart_event">Add standart Event</string>
    <string name="add_day_event">Add Day Event</string>
    <string name="menu_add_element">Add element</string>

    <!-- Charts activity -->
    <string name="charts">Charts</string>
    <string name="good_days_charts">Good</string>
    <string name="bad_days_charts">Bad</string>

    <!-- Calendar activity -->
    <string name="calendar">Calendar</string>

    <!-- Profile activity -->
    <string name="profile">Profile</string>

    <!-- Settings activity -->
    <string name="settings">Settings</string>

    <!-- Events activity -->
    <string name="events">Events</string>
    <string name="show_events">Show Events</string>
    <string name="search_week">Search week</string>
    <string name="search_week_events">Search week events</string>
    <string name="search_month">Search month</string>
    <string name="search_month_events">Search month events</string>
    <string name="search_year_events">Search year events</string>
    <string name="search_year">Search year</string>

    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- Standart events activity -->
    <string name="standarts_events">Events from list</string>
    <string name="sat">Sat</string>
    <string name="fr">Fri</string>
    <string name="th">Thu</string>
    <string name="we">Wed</string>
    <string name="tu">Tue</string>
    <string name="mo">Mon</string>
    <string name="su">Sun</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="register">Register</string>
    <string name="add_event_from_calendar">Add event from calendar</string>
    <string name="license">License</string>
    <string name="search">Search</string>

</resources>
